<resources>

    <string name="app_name">HDPtest</string>
    
	<!-- 현재 애플리케이션의 상태를 표현하기 위한 문자열 -->
    <string name="status_ready">측정하기 위해서 측정준비 버튼을 누르세요.</string>
    <string name="status_reg">앱등록 결과: %d (0 :성공, -1 :실패)</string>
    <string name="status_unreg">앱등록해제: %d (0 :성공, -1 :실패)</string>
    <string name="status_create_channel">채널연결생성 결과: %d (0 :성공, -1 :실패)</string>
	<string name="status_destroy_channel">채널연결해제: %d (0 :성공, -1 :실패)</string>
	<string name="status_read_data">데이터 수신중....</string>
	<string name="status_read_data_done">데이터 수신완료...</string>
        
    <!-- 버튼 및 텍스트뷰이름 -->
    <string name="widget_register">측정준비(앱등록) </string>
	<string name="widget_unregister">측정준비해제(앱등록해제)</string>
	<string name="widget_app_registration">혈압측정 설정</string>
	<string name="widget_app_state">앱의 내부동작 상태:</string>
	<string name="widget_data_status">데이터 없음..</string>
	<string name="widget_connection_state">연결상태:</string>
    
    <!-- 장치가 연결되었는지 여부를 나타낸다.  -->
    
    <string name="device_disconnected">미연결 상태!</string>
    <string name="device_connected">연결되었음!</string>
    
    <!--  블루투스 장치의 사용여부 -->
    <string name="bluetooth_health_profile_not_available">블루투스 헬스 프로파일 사용불가..</string>
    <string name="bluetooth_not_available">블루투스 장치가 사용불가능합니다.</string>

	
	<!--  기타 .. -->
	<string name="dialog_select_device">장치를 선택하세요</string>
	<string name="ok">OK</string>
</resources>
