<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical" >

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/widget_app_registration"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_register_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:text="@string/widget_register" />

        <Button
            android:id="@+id/button_unregister_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:text="@string/widget_unregister" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
       >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_connection_state"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/space"
            android:layout_width="5sp"
            android:layout_height="0sp"
             />

        <TextView
            android:id="@+id/connect_ind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_disconnected"
            android:textSize="18sp" 
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget_app_state" />

        <TextView
            android:id="@+id/app_status_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_ready"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#000000" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="3dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/status_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/widget_data_status" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>